# mood-tracker

./: .gitignore  Cargo.toml  README.md
.github/workflows/: breaking-change.yml  ci.yml  code-quality.yml  first-time-contributor.yml  new-account-label.yml  pr-category.yml  pr-femboy-praise.yml  pr-lint.yml  pr-size.yml  review-rating.yml
ai/: config.json
migrations/: 0001_create_users.sql  0002_create_sessions.sql
src/: auth.rs  config.rs  db.rs  error.rs  main.rs  state.rs
src/models/: checkin.rs  mod.rs  session.rs  settings.rs  trip.rs  user.rs
src/routes/: admin.rs  mod.rs  public.rs  user.rs
src/services/: git.rs  matrix.rs  mod.rs  storage.rs
static/: app.css
templates/: base.html  landing.html
templates/admin/: dashboard.html  settings.html  system.html  user_detail.html  users_list.html
templates/auth/: login.html  register.html
templates/user/: checkin_detail.html  checkin_new.html  checkins_list.html  dashboard.html  mood_page.html  mood_widget.html  panic.html  settings.html  trips_list.html
tests/: bdd.rs
tests/features/: basic.feature
